# vgi-mft

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  vgi-lint.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  check-version.sh  preprocess-require.awk  run-integration.sh
crates/mft-core/: Cargo.toml
crates/mft-core/src/: cursor.rs  data.rs  errors.rs  file_name.rs  filetime.rs  lib.rs  parse.rs  record.rs  resolver.rs  standard_info.rs  synth.rs  timestomp.rs
crates/mft-core/tests/: fuzz_never_panic.proptest-regressions  fuzz_never_panic.rs  golden.rs
crates/mft-wasm/: Cargo.toml
crates/mft-wasm/src/: lib.rs
crates/mft-worker/: Cargo.toml
crates/mft-worker/examples/: gen_fixture.rs
crates/mft-worker/src/: arrow_io.rs  arrow_map.rs  lib.rs  main.rs  meta.rs  options.rs
crates/mft-worker/src/scalar/: full_path.rs  mft_record.rs  mod.rs  record_header.rs  timestomp.rs  version.rs  well_formed.rs
crates/mft-worker/src/table/: mod.rs  read_mft.rs
crates/mft-worker/src/table_in_out/: attributes.rs  mod.rs  streams.rs
data/: sample.mft
test/sql/: scalars.test  timeline.test
wasm/: build.sh
