[package]
name = "mft-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure NTFS $MFT record-decode, path reconstruction, and timestomp heuristic engine for the vgi-mft VGI worker (no Arrow / no VGI deps)"

[dependencies]
mft = "0.7"
jiff = "0.2"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[features]
# Exposes the synthetic `$MFT` builder (`synth`) for byte-accurate golden
# fixtures. Test-support only; never enabled by the release worker.
synth = []

[dev-dependencies]
# Self-dep with `synth` so this crate's own integration tests (tests/) see the
# synthetic-$MFT builder, which is feature-gated out of the released library.
mft-core = { path = ".", features = ["synth"] }
proptest = "1"
