[package]
name = "mft-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "VGI worker parsing the NTFS $MFT into a forensic filesystem timeline in DuckDB over Apache Arrow"

[lib]
name = "mft_worker"
path = "src/lib.rs"

[[bin]]
name = "mft-worker"
path = "src/main.rs"

[dependencies]
mft-core = { path = "../mft-core" }
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
glob = "0.3"
log = "0.4"

# --- Native ---------------------------------------------------------------
# The SDK's real default features — unchanged from before the wasm split.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
vgi = { workspace = true, features = ["sqlite", "transport-http"] }
vgi-rpc = { workspace = true, features = ["http"] }
env_logger = "0.11"

# --- wasm32 ---------------------------------------------------------------
# No sqlite (C) and no HTTP transport (tokio/mio/axum); the bincode stream codec
# is what the SAB byte-channel transport needs. No env_logger.
[target.'cfg(target_arch = "wasm32")'.dependencies]
vgi = { workspace = true }
vgi-rpc = { workspace = true, features = ["stream-codec"] }

[dev-dependencies]
# The synthetic-$MFT builder for byte-accurate worker fixtures.
mft-core = { path = "../mft-core", features = ["synth"] }
